fixed alignment

--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ footer p {
 }
 
 /* -------  Media Query ------- */
-@media all and (min-width: 810px) {
+@media all and (min-width: 480px) {
   h1 {
     font-size:28px;
   }
@@ -181,16 +181,22 @@ footer p {
   #about div {
     display: flex;
     justify-content: space-between;
+    align-items: center;
   }
   #about img {
-    max-width: 30%;
+    flex: 1;
+    max-width: 25%;
     height: auto;
     justify-content: space-between;
-    padding: 10px;
+    padding: 5px;
   }
   #about h2 {
     text-align: center;
   }
+  #about p {
+    flex: 3;
+  }
+
 /* Ideas */
   .grid-container {
     display: grid;
@@ -220,10 +226,10 @@ footer p {
     font-size: 14px;
     display: flex;
     flex-direction: row;
+    justify-content: center;
+    align-items: center;
   }
   #host img {
     max-width: 50%;
-    display: flex;
-    flex-direction: row;
   }
 }
